Bug 357210 - Red close icon does not work on colored backgrounds
Summary: Red close icon does not work on colored backgrounds
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwidgetsaddons
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.29.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Uri Herrera
URL: https://git.reviewboard.kde.org/r/126...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-12-27 09:39 UTC by Heiko Tietze
Modified: 2017-10-02 20:56 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.30
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2015-12-27 09:39:14 UTC
The message panel has a colored background that jars with the red close icon.

Reproducible: Always
Comment 1 andreas_k 2015-12-27 19:46:22 UTC
screenshot please
Comment 2 Heiko Tietze 2015-12-27 20:07:46 UTC
The URL shows all three types of message panels.
Comment 3 Heiko Tietze 2016-02-29 23:06:36 UTC
Likely fixed, see https://git.reviewboard.kde.org/r/126523/
Comment 4 Martin Klapetek 2016-03-01 15:21:21 UTC
I'm not sure if it's actually fixed, both window-close and dialog-close do not really work on the colored backgrounds of KMessageWidget. I'm just not sure if that's something that should be fixed in the icon or in KMessageWidget (by setting a background for the button, for example)
Comment 5 Elvis Angelaccio 2016-12-30 11:08:47 UTC
Reopened and moved to kwidgetsaddons, fix in https://phabricator.kde.org/D3418
Comment 6 Elvis Angelaccio 2016-12-30 11:32:27 UTC
Git commit 497c463a4a430f8bef726bc415011d231bf9cf46 by Elvis Angelaccio.
Committed on 30/12/2016 at 11:29.
Pushed by elvisangelaccio into branch 'master'.

KMessageWidget: use darker red color when type is Error

Otherwise the close button is barely visible. There isn't an easy way to
change to color of the close button icon, so we use a slightly darker
background color instead.
FIXED-IN: 5.30

Differential Revision: D3418

M  +2    -0    src/kmessagewidget.cpp

https://commits.kde.org/kwidgetsaddons/497c463a4a430f8bef726bc415011d231bf9cf46