KMessageWidget: use darker red color when type is Error

Otherwise the close button is barely visible. There isn't an easy way to
change to color of the close button icon, so we use a slightly darker
background color instead.

BUG: 357210
FIXED-IN: 5.30

Differential Revision: D3418