src/kmessagewidget.cpp
@@ -290,6 +290,8 @@ void KMessageWidget::setMessageType(KMessageWidget::MessageType type)
         break;
     case Error:
         bg1.setRgb(218, 68, 83); // values taken from kcolorscheme.cpp (Negative)
+        // #357210: use darker color to improve the visibility of close button.
+        bg1 = bg1.darker(110);
         fg.setRgb(239, 240, 241);
         break;
     }
